Backend - Added the function of modifying user information. - Canceled the function of uploading pictures by web link, and the operation on pictures requires login. - Updated the documentation.
